--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   firebase_core: ^0.5.3
   firebase_database: ^4.4.0
+  cloud_firestore: ^0.14.4
 
 
   # The following adds the Cupertino Icons font to your application.
