--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   firebase_core: ^0.5.3
   firebase_database: ^4.4.0
   cloud_firestore: ^0.14.4
+  intl: ^0.16.1
 
 
   # The following adds the Cupertino Icons font to your application.
